k8s/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 0
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: bitnami/postgresql@sha256:c30c796dcf96a67a405b905bf6aaf8d6c957d5c2fe729db6e67e2760e21fd9f8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /bitnami/postgresql
          startupProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U \"$POSTGRESQL_USERNAME\" -d \"$POSTGRESQL_DATABASE\" -h 127.0.0.1"]
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U \"$POSTGRESQL_USERNAME\" -d \"$POSTGRESQL_DATABASE\" -h 127.0.0.1"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U \"$POSTGRESQL_USERNAME\" -d \"$POSTGRESQL_DATABASE\" -h 127.0.0.1"]
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsGroup: 0
            runAsUser: 1001
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
