k8s/base/myservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  type: ClusterIP
  selector:
    app: myservice
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
