k8s/base/myservice2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice2
spec:
  type: ClusterIP
  selector:
    app: myservice2
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
